gitops/apps/_templates/kustomize-app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
  labels:
    toolkit.fluxcd.io/tenant: apps
