gitops/apps/_templates/kustomize-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - my-app.${CLUSTER_DOMAIN:-example.com}
      secretName: my-app-tls
  rules:
    - host: my-app.${CLUSTER_DOMAIN:-example.com}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  name: http
